RESOLVED FIXED 130792
Reasoning about DWARF register numbers should be moved out of FTL::Location
https://bugs.webkit.org/show_bug.cgi?id=130792
Summary Reasoning about DWARF register numbers should be moved out of FTL::Location
Filip Pizlo
Reported 2014-03-26 12:36:44 PDT
So that it could be reused by the code I will eventually add for parsing the LiveOuts section of StackMaps.
Attachments
the patch (17.36 KB, patch)
2014-03-26 12:39 PDT, Filip Pizlo
no flags
the patch (16.88 KB, patch)
2014-03-26 12:40 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2014-03-26 12:39:05 PDT
Created attachment 227876 [details] the patch
Filip Pizlo
Comment 2 2014-03-26 12:40:19 PDT
Created attachment 227877 [details] the patch Cleaned up a bit
WebKit Commit Bot
Comment 3 2014-03-26 12:43:03 PDT
Attachment 227877 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLDWARFRegister.cpp:27: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/JavaScriptCore/ftl/FTLDWARFRegister.cpp:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2014-03-26 13:14:13 PDT
(In reply to comment #3) > Attachment 227877 [details] did not pass style-queue: > > > ERROR: Source/JavaScriptCore/ftl/FTLDWARFRegister.cpp:27: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] > ERROR: Source/JavaScriptCore/ftl/FTLDWARFRegister.cpp:31: Alphabetical sorting problem. [build/include_order] [4] > Total errors found: 2 in 7 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Fixed.
Filip Pizlo
Comment 5 2014-03-26 13:51:25 PDT
Note You need to log in before you can comment on or make changes to this bug.